# KITE-APP

./: CLAUDE.md  README.md  discord-rpc-sidecar.cjs  package-lock.json  package.json  vite.config.js
.claude/: launch.json  settings.local.json
reference/: AI_CHATBOT.html
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/Downloads/: Conductor_CEO_Charlie_Holtz_Walks_Us_Through_His_AI_Coding_Setup.webm.part
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
