[package]
name = "kite-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
rfd = "0.14"
imap = "2.4"
imap-proto = "0.10"
native-tls = "0.2"
mailparse = "0.15"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "native-tls", "builder"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
calamine = "0.26"
walkdir = "2"
tiny_http = "0.12"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
sha2 = "0.10"
httpdate = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
